--- a/x-pack/solutions/search/plugins/serverless_search/kibana.jsonc
+++ b/x-pack/solutions/search/plugins/serverless_search/kibana.jsonc
@@ -29,7 +29,8 @@
       "security",
       "serverless",
       "share",
-      "visualizations"
+      "visualizations",
+      "onechat",
     ],
     "optionalPlugins": [
       "indexManagement",
